Update feito na branch master para gerar conflito de versões

--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <html>
     <body>
         <h1>Minha página HTML</h1>
+        <p>Gerando conflito de versões entre as branchs</p>
     </body>
 </html>
