Update do arquivo index.html após voltar na linha do tempo.

--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <html>
     <body>
         <h1>Minha página HTML</h1>
-        <h3>Aprendendo a trabalhar com branchs</h3>
+        <br>
+        <p>Atualização após voltar na linha do tempo</p>
     </body>
 </html>
