Testando o comando PULL

--- a/index.html
+++ b/index.html
@@ -2,6 +2,6 @@
     <body>
         <h1>Minha página HTML</h1>
         <br>
-        <p>Atualização após voltar na linha do tempo</p>
+        <p>Atualização após voltar na linha do tempo. ☺</p>
     </body>
 </html>
